<resources>
    <string name="app_name">AnimalHelp</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="advertencia">advertencia</string>
    <string name="textbusqueda">Ayuda a una mascota</string>
    <string name="textadpccion">Adopcion</string>
    <string name="textperdida">Perdio a su mascota ?</string>


    <string name="adoptar">adoptar</string>
    <string name="txtanimal">Encontre un Animal</string>


    // Login textos

    
    //ayuda
    <string name="textTiayuda">Ayuda a una Mascota</string>
    <string name="texbtEnviar">iniciar secion</string>
    <string name="textbtperro">Perro</string>
    <string name="textbtgato">Gato </string>
    <string name="textbtotro">Otro</string>
    <string name="textbtFoto">tomar Foto</string>
    <string name="ubicacion">Ubicacion y referencia </string>
    <string name="descripcion">Descripcion del animal (estado,tipo de riesgo) </string>

    <string name="Enviarfoto">Enviar  </string>
    <string name="titulo"> Titulo: un mensaje de ayuda que no ayudara acontactarte mas rapido   </string>

    <string name="situacion">Situacion del animal </string>

    <string name="textipoanimal">Tipo de Animal</string>
    <string name="textTiecontrar">Te Ayudaremos a encontrar tu Mascota</string>
    <string name="title_activity_navegacion">navegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
