<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalPantalla">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCargada"
                android:layout_width="match_parent"
                android:layout_height="201dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                app:srcCompat="@android:color/holo_blue_bright" />


            <Button
                android:id="@+id/btnFoto"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="182dp"
                android:layout_marginRight="182dp"
                android:layout_marginBottom="30dp"
                android:text="tomar foto" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textipoanimal" />


            <LinearLayout
                android:layout_width="295dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbgato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textbtgato"
                        tools:layout_editor_absoluteX="150dp"
                        tools:layout_editor_absoluteY="295dp" />

                    <RadioButton
                        android:id="@+id/rbperro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textbtperro"
                        tools:layout_editor_absoluteX="150dp"
                        tools:layout_editor_absoluteY="295dp" />


                    <RadioButton
                        android:id="@+id/rbotro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textbtotro"
                        tools:layout_editor_absoluteX="150dp"
                        tools:layout_editor_absoluteY="295dp" />

                </RadioGroup>
            </LinearLayout>


            <EditText
                android:id="@+id/txtTituloPrin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="titulo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtubicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/ubicacion"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtdescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/descripcion"
                android:inputType="textPersonName" />


            <Button
                android:id="@+id/btnEnviarU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Enviarfoto" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>