<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".perdido">

    <include
        layout="@layout/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="77dp"></include>
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_marginTop="184dp"
        android:text="@string/textbtFoto"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="190dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="4dp"
        tools:text="@string/textTiecontrar" />

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="274dp"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/textbtgato"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="295dp" />


        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textbtotro"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="295dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="421dp"
        android:ems="10"
        android:hint="Describe tu animal"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="398dp" />

</RelativeLayout>